Add not working solution in new cmd window